--- a/BTC3site/Views/Home/Index.cshtml
+++ b/BTC3site/Views/Home/Index.cshtml
@@ -1,31 +1,266 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Bitcoin 3 - the p2p transaction system the way Satoshi intended it";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
+    <h1>Bitcoin 3</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+<section class="space--xs" id="about-section" data-section="about">
+    <div class="container">
+        <div class="row section-heading to-animate">
+
+            <div class="col-sm-12 text-center">
+                <h2>The Best Money in the World</h2>
+            </div>
+
+            <div class="col-sm-12 col-md-6 text-center">
+                <iframe width="560" height="315" src="./Bitcoin Cash - Peer-to-Peer Electronic Cash_files/UjodLvD23kI.html" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+            </div>
+
+            <div class="col-sm-12 col-md-6">
+
+                <p>
+                    Bitcoin Cash brings sound money to the world, fulfilling the original promise of Bitcoin as "Peer-to-Peer Electronic Cash". Merchants and users are empowered with low fees and reliable confirmations. The future shines brightly with unrestricted growth, global adoption, permissionless innovation, and decentralized development.
+                </p>
+
+                <p>
+                    All Bitcoin holders as of block 478558 are also owners of Bitcoin Cash. All are welcome to join the Bitcoin Cash community as we move forward in creating sound money accessible to the whole world.
+                </p>
+
+            </div>
+
+        </div>
+
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+</section>
+
+<section class="space--xxs">
+    <div class="container benefits">
+        <div class="row space--xs">
+            <div class="col-sm-12">
+                <div class="pop-shadow whitepaper-promo">
+                    <p><ion-icon name="document" role="img" class="hydrated" aria-label="document"></ion-icon></p>
+                    <p><strong>Read the Whitepaper</strong></p>
+                    <p>
+                        The original whitepaper was published on October 31, 2008 by Satoshi Nakamoto, the anonymous creator of the world's first cryptocurrency. The title of the Bitcoin whitepaper is "Bitcoin: A Peer-to-Peer Electronic Cash System". Bitcoin Cash aims to continue this vision of bringing sound money to the world.
+                    </p>
+                    <a href="https://www.bitcoincash.org/bitcoin.pdf" title="Bitcoin Whitepaper" class="btn btn-secondary large btn-round">Read the Whitepaper</a>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+</section>
+
+<section class="space--xxs" id="roadmap">
+    <div class="container">
+        <div class="community-cta section-heading to-animate">
+            <div class="col-sm-12 col-lg-8 col-lg-offset-2 text-center">
+                <p><strong>The Bitcoin Cash Roadmap</strong></p>
+                <p>To become a solid base for application development and innovation, Bitcoin Cash must continuously improve and compete. Working together, we can build a technical foundation to empower Bitcoin Cash to be the best money the world has ever seen.</p>
+
+                <a class="btn btn-primary large btn-round" href="https://www.bitcoincash.org/roadmap.html">
+                    View The Roadmap
+                </a>
+
+            </div>
+        </div>
     </div>
-</div>
+</section>
+
+<section class="space--xxs no-bottom">
+    <div class="container benefits">
+
+
+        <div class="row text-center">
+            <div class="col-sm-4 col-md-4 to-animate">
+                <div class="pop-shadow">
+                    <p><ion-icon name="jet" role="img" class="hydrated" aria-label="jet"></ion-icon></p>
+                    <p><strong>Fast</strong></p>
+                    <p>Transact in seconds. Get confirmed in minutes.</p>
+                </div>
+            </div>
+            <div class="col-sm-4 col-md-4 to-animate">
+                <div class="pop-shadow">
+                    <p><ion-icon name="cog" role="img" class="hydrated" aria-label="cog"></ion-icon></p>
+                    <p><strong>Reliable</strong></p>
+                    <p>A network that runs without congestion.</p>
+                </div>
+            </div>
+            <div class="col-sm-4 col-md-4 to-animate">
+                <div class="pop-shadow">
+                    <p><ion-icon name="arrow-down" role="img" class="hydrated" aria-label="arrow down"></ion-icon></p>
+                    <p><strong>Low Fees</strong></p>
+                    <p>Send money globally for pennies.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-sm-4 col-md-4 to-animate">
+                <div class="pop-shadow">
+                    <p><ion-icon name="ios-cafe" role="img" class="hydrated" aria-label="cafe"></ion-icon></p>
+                    <p><strong>Simple</strong></p>
+                    <p>Easy to use. No hassles.</p>
+                </div>
+            </div>
+            <div class="col-sm-4 col-md-4 to-animate">
+                <div class="pop-shadow">
+                    <p><ion-icon name="business" role="img" class="hydrated" aria-label="business"></ion-icon></p>
+                    <p><strong>Stable</strong></p>
+                    <p>A payment system that's a proven store of value.</p>
+                </div>
+            </div>
+            <div class="col-sm-4 col-md-4 to-animate">
+                <div class="pop-shadow">
+                    <p><ion-icon name="lock" role="img" class="hydrated" aria-label="lock"></ion-icon></p>
+                    <p><strong>Secure</strong></p>
+                    <p>World's most robust blockchain technology.</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<section class="space--xxs" id="connect">
+    <div class="slant-top"></div>
+    <div class="container">
+        <div class="community-cta section-heading to-animate">
+            <div class="col-sm-12 col-lg-8 col-lg-offset-2 text-center">
+                <h5>Join the Bitcoin Cash community</h5>
+                <a class="btn btn-default large round" href="https://reddit.com/r/btc" target="_blank">
+                    <ion-icon name="logo-reddit" role="img" class="hydrated" aria-label="logo reddit"></ion-icon> /r/btc
+                </a>
+                <a class="btn btn-default large round" href="https://www.facebook.com/bitcoincashorg/" target="_blank">
+                    <ion-icon name="logo-facebook" role="img" class="hydrated" aria-label="logo facebook"></ion-icon> Facebook
+                </a>
+                <a class="btn btn-default large round" href="https://t.me/BitcoinCashUpdates" target="_blank">
+                    <ion-icon name="paper-plane" role="img" class="hydrated" aria-label="paper plane"></ion-icon> Telegram
+                </a>
+                <a class="btn btn-default large round" href="https://github.com/bitcoincashorg/bitcoincash.org" target="_blank">
+                    <i class="socicon socicon-github"></i> GitHub
+                </a>
+                <a class="btn btn-default large round" href="https://reddit.com/r/bitcoincash" target="_blank">
+                    <ion-icon name="logo-reddit" role="img" class="hydrated" aria-label="logo reddit"></ion-icon> /r/bitcoincash
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="slant"></div>
+</section>
+
+
+<section class="space--xs" id="step-section">
+    <div class="container">
+        <div class="section-heading row to-animate">
+            <div class="col-sm-12 text-center">
+                <h2>Getting Started</h2>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+                <div class="card-user-profile card-step1">
+                    <a href="https://www.bitcoincash.org/getting-started.html">
+                        <img class="card-user-profile-img" src="./Bitcoin Cash - Peer-to-Peer Electronic Cash_files/getting-started.jpg" alt="Getting Started Getting Started Bitcoin Cash">
+                    </a>
+                    <div class="card-user-profile-content card-section">
+                        <div class="card-user-profile-avatar">
+                            <ion-icon name="school" role="img" class="hydrated" aria-label="school"></ion-icon>
+                        </div>
+                        <p class="card-user-profile-name">What is peer to peer electronic cash?</p>
+                        <p class="card-user-profile-status">1. Getting Started</p>
+                        <p class="card-user-profile-info">Peer to peer (P2P) electronic cash is simply described as online money sent from one person to another without the need for a trusted third-party. As described in the original Bitcoin whitepaper by Satoshi Nakamoto, P2P cash makes use of digital signatures as part of the solution, but the main benefits are lost if a trusted third party is still required to prevent fraud. This makes P2P cash a trustless and safe way to transact without the need of intermediaries.</p>
+                    </div>
+
+                    <div class="card-user-profile-actions">
+                        <a href="https://www.bitcoincash.org/getting-started.html" class="card-user-profile-button btn btn-secondary btn-round secondary">View More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6">
+                <div class="card-user-profile card-step2">
+                    <a href="https://www.bitcoincash.org/wallets.html">
+                        <img class="card-user-profile-img" src="./Bitcoin Cash - Peer-to-Peer Electronic Cash_files/bitcoin-cash-wallet.jpg" alt="Download a wallet Bitcoin Cash Wallet on iPhone and Macbook">
+                    </a>
+                    <div class="card-user-profile-content card-section">
+                        <div class="card-user-profile-avatar">
+                            <ion-icon name="wallet" role="img" class="hydrated" aria-label="wallet"></ion-icon>
+                        </div>
+                        <p class="card-user-profile-name">Where do I store my Bitcoin Cash?</p>
+                        <p class="card-user-profile-status">2. Download a wallet</p>
+                        <p class="card-user-profile-info">Getting started with Bitcoin Cash is super easy. The first step is to download a wallet so that you can begin participating in the Bitcoin economy. Most wallets are free to download and are easy to use that have a few key features such as sending, receiving, storing funds securely, transaction lookups, and more. </p>
+                    </div>
+
+                    <div class="card-user-profile-actions">
+                        <a href="https://www.bitcoincash.org/wallets.html" class="card-user-profile-button btn btn-secondary btn-round secondary">View More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+                <div class="card-user-profile card-step3">
+                    <a href="https://www.bitcoincash.org/buy-bitcoin-cash.html">
+                        <img class="card-user-profile-img" src="./Bitcoin Cash - Peer-to-Peer Electronic Cash_files/buy-bitcoin-cash.jpg" alt="Buy or Earn Bitcoin Cash Bitcoin Cash Coin with Coinbase Behind">
+                    </a>
+                    <div class="card-user-profile-content card-section">
+                        <div class="card-user-profile-avatar">
+                            <ion-icon name="cart" role="img" class="hydrated" aria-label="cart"></ion-icon>
+                        </div>
+                        <p class="card-user-profile-name">How do I get Bitcoin Cash?</p>
+                        <p class="card-user-profile-status">3. Buy or Earn Bitcoin Cash</p>
+                        <p class="card-user-profile-info">The two easiest ways to get Bitcoin Cash is to buy or work for it. Buying Bitcoin Cash is the most used and convenient way, where all you have to do is sign up for a Bitcoin exchange and deposit funds so you can convert it to Bitcoin Cash. The exchange will send you Bitcoin Cash after the trade has occurred.</p>
+                    </div>
+
+                    <div class="card-user-profile-actions">
+                        <a href="https://www.bitcoincash.org/buy-bitcoin-cash.html" class="card-user-profile-button btn btn-secondary btn-round secondary">View More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6">
+                <div class="card-user-profile card-step4">
+                    <a href="https://www.bitcoincash.org/spend-bitcoin-cash.html">
+                        <img class="card-user-profile-img" src="./Bitcoin Cash - Peer-to-Peer Electronic Cash_files/spend-bitcoin-cash.jpg" alt="Spend Bitcoin Cash - Tokyo Shibuya Crossing Bitcoin Cash">
+                    </a>
+                    <div class="card-user-profile-content card-section">
+                        <div class="card-user-profile-avatar">
+                            <ion-icon name="gift" role="img" class="hydrated" aria-label="gift"></ion-icon>
+                        </div>
+                        <p class="card-user-profile-name">What can I buy with Bitcoin Cash?</p>
+                        <p class="card-user-profile-status">4. Spend Bitcoin Cash</p>
+                        <p class="card-user-profile-info">Bitcoin Cash isn’t just for speculation. It’s intended usage is a peer to peer electronic currency, which means, it should be spent. Spending Bitcoin Cash is fast, with near-instant transactions and sub-cent transaction fees, making it the most secure and widely used digital currency on the planet.</p>
+                    </div>
+
+                    <div class="card-user-profile-actions">
+                        <a href="https://www.bitcoincash.org/spend-bitcoin-cash.html" class="card-user-profile-button btn btn-secondary btn-round secondary">View More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-md-offset-3">
+                <div class="card-user-profile card-step5">
+                    <a href="https://www.bitcoincash.org/accept-bitcoin-cash.html">
+                        <img class="card-user-profile-img" src="./Bitcoin Cash - Peer-to-Peer Electronic Cash_files/accept-bitcoin-cash.jpg" alt="Accept Bitcoin Cash - iPad accepting Bitcoin Cash">
+                    </a>
+                    <div class="card-user-profile-content card-section">
+                        <div class="card-user-profile-avatar">
+                            <ion-icon name="star" role="img" class="hydrated" aria-label="star"></ion-icon>
+                        </div>
+                        <p class="card-user-profile-name">How can my business use Bitcoin Cash?</p>
+                        <p class="card-user-profile-status">5. Accept Bitcoin Cash</p>
+                        <p class="card-user-profile-info">As a merchant one of your main goals is to be able to accept and process payments as quickly and seamlessly as possible so you can make your customers happy and receive payments without any headaches. Bitcoin Cash is the solution, as it has fast and low-cost transactions. As the world goes digital, electronic currencies such as Bitcoin are becoming the go-to method for paying online and in retail shops. Easily accept Bitcoin Cash directly or use third-party providers to accept Bitcoin Cash using their platforms and convert all or part of the sale into local fiat currency.</p>
+                    </div>
+
+                    <div class="card-user-profile-actions">
+                        <a href="https://www.bitcoincash.org/accept-bitcoin-cash.html" class="card-user-profile-button btn btn-secondary btn-round secondary">View More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
